[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus"
version = "4.0"
description = "A command-line cybersecurity toolkit for authorized testing, OSINT, and security research."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Derian Farley" }
]
requires-python = ">=3.8"
keywords = [
    "cybersecurity", "osint", "penetration-testing", "network-analysis",
    "cryptography", "ctf", "security", "cli", "packet-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]

# Core dependencies — required for most tools to function
dependencies = [
    "requests>=2.32.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
    "scapy>=2.5.0",
]

[project.optional-dependencies]
# pip install argus[crypto]
crypto = [
    "cryptography>=42.0.0",
]

# pip install argus[passwords]
passwords = [
    "zxcvbn>=4.4.28",
]

# pip install argus[keylogger]
keylogger = [
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]

# pip install argus[pcap]
pcap = [
    "dpkt>=1.9.8",
    "numpy>=1.26.0",
]

# pip install argus[osint]
osint = [
    "Pillow>=10.0.0",
    "dnspython>=2.4.0",
    "python-whois>=0.9.4",
]

# pip install argus[web]
web = [
    "sslyze>=6.0.0",
    "fake-useragent>=1.5.0",
    "wappalyzer-python>=0.1.2",
    "playwright>=1.40.0",
]

# pip install argus[all]  — everything except platform-specific packages
all = [
    "cryptography>=42.0.0",
    "zxcvbn>=4.4.28",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "dpkt>=1.9.8",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "dnspython>=2.4.0",
    "python-whois>=0.9.4",
    "sslyze>=6.0.0",
    "fake-useragent>=1.5.0",
    "wappalyzer-python>=0.1.2",
    "playwright>=1.40.0",
]

[project.scripts]
argus = "argus:main"

[project.urls]
Homepage   = "https://github.com/derianfarley/argus"
Repository = "https://github.com/derianfarley/argus"

[tool.setuptools]
py-modules = ["argus"]
